Bug 842852 - LocalStorage performance improvements. r=mak